# agent_project

./: .dockerignore  .env.example  .gitignore  AGENTS.md  FOLDER_CONVENTIONS.md  PROJECT.md  README.md  SQL_RAG_Research_Report.md  docker-compose.yml  docker_install_guide.md  log.txt  requirements-docling.txt  requirements.txt  sql-example - 2026.4.10 mod.md  suggest.txt  test_chat.html  test_rag_import.py  tmp.txt
.qdrant_local/: meta.json
.rag_state/: docs_state.json  sql_state.json
agent_backend/: main.py
agent_frontend/: index.html  install.bat  package-lock.json  package.json  tailwind.config.js  vite.config.js
data/: chat_history.db  chat_history.db-shm  chat_history.db-wal
docker/: .dockerignore  BASE_IMAGE_GUIDE.md  Dockerfile.backend  Dockerfile.backend.base  Dockerfile.docling-sync  Dockerfile.docling-sync.base  Dockerfile.frontend  README.md  build-base.ps1  build-base.sh  build-docling-sync.ps1  build-docling-sync.sh  deploy-offline.bat  deploy-offline.sh  deploy.bat  deploy.sh  entrypoint.frontend.sh  nginx.conf  package-offline.bat  package-offline.sh
docs/: Docker安装指南.md  Docker部署文档.md  Node.js安装指南.md  PROBLEM_SOLVED.md  ops-report-flow-brief.md  plan04.md  sql-example.md  快速测试指南.md  数据库配置指南.md  桌管问题文档.md  测试运行指南.md  配置文件说明.md
help/: task.md  (+3 more)
qt/XFAgentBridge/: CMakeLists.txt  README.md
qt/XFAgentBridge/src/: BridgeSettings.cpp  BridgeSettings.h  HttpServerController.cpp  HttpServerController.h  MainWindow.cpp  MainWindow.h  TaskProcessor.cpp  TaskProcessor.h  TaskReceiver.cpp  TaskReceiver.h  main.cpp  processipc.cpp  processipc.h
(+232 files in other folders)
